# melding

./: .env  Cargo.toml
migrations/: 001_melding.sql
src/: main.rs
src/domain/: mattilsyn_melding.rs  mod.rs
src/routes/: dtos.rs  mattilsynmelding.rs  mod.rs
